javaWebApp_k8s/javaWebApp-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-web-app
  namespace: test-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-web-app
  template:
    metadata:
      labels:
        app: java-web-app
    spec:
      containers:
      - name: java-web-app
        image: jawad57903/demo-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
