javaWebApp_k8s/javaWebApp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: test-space
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
