javaWebApp_k8s/local-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-web-app-ingress
  namespace: test-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: java-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-web-app-service
            port:
              number: 80
